# semtex

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README  README.md
BioEngSys/: coursenotes1.tex  jfmlc.bst  labnotes1.tex
Prism/: Makefile  README  template.mk
aero/: Makefile  NS.C  NS.cpp  aero.h  aeroanalysis.C  aeroanalysis.cpp  body.C  drive.C  drive.cpp  dyres.c  eddyvis.C  refreq.C  refreq.cpp  relv.c  testsuite
bibsrc/: Makefile  acoust.bib  actuator.bib  aero.bib  bfs.bib  bio.bib  bl.bib  book.bib  bubbly.bib  chroma.bib  combust.bib  compress.bib  control.bib  disper.bib  electro.bib  entry  equip.bib  expttech.bib  firewhirl.bib  flap.bib  free.bib  fuelcell.bib  iwave.bib  jet.bib  jrnl.bib  les.bib  machine.bib  mechanics.bib  mesh.bib  mhd.bib  mix.bib  natcon.bib  nldyn.bib  nmr.bib  nonnew.bib  num.bib  part.bib  pipe.bib  pubs.bib  rand.bib  (+21 more)
cgrid/: Grid.h  Makefile  airfoil.C  cgen.C  cgrid.f  foil.C  grid.f  map.C  odeint.C  plate.C  rk.C  stretch.C  testfoil.C
dadns/: Makefile  dns.h  dnsanalysis.cpp  drive.C  drive.cpp  integrateNS.C  pseudo.C
datan/: FFTutil.c  FFTutil.h  Makefile  README  acor.c  asp.c  chop.c  correlate.c  cycint.C  cycle.C  demean.c  demean.p  dft_chk.c  embed.C  laminate  mdlrat.c  memspec.c  nr77.h  odeint.C  pcor.c  pdf.c  peaks.C  ratfit.C  recipes.f  slit.c  smooth.C  upxf.C  waves.plot  zeros.C
dick/: abbrev.tex  ack.tex  bib.tex  bibtopic.sty  blurb.txt  book.bib  book.cls  book.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex  ch08.tex  ch09.tex  ch10.tex  ch11.tex  ch12.tex  ch13.tex  ch14.tex  ch15.tex  ch16.tex  endnotesn.sty  jox.bst  maps.tex  notes.tex  primary.bib  secondary.bib  select.bib  selectbib.tex  selectbib2.tex  selectbibgen.tex  submit1.tex  townlist.txt
dns/: CMakeLists.txt  Makefile  dmd_driver.cpp  dns.h  dnsanalysis.C  dnsanalysis.cpp  drive.C  drive.cpp  fieldforce.cpp  fieldforce.h  integrate.C  integrate.cpp  integrate.pc  integrate.rk  integrate_pc.cpp  integrate_rk.cpp  integrates.cpp  nonlinear.C  nonlinear.cpp  rpo_add_const.cpp  rpo_axpy.cpp  rpo_beta_1to2.cpp  rpo_bootstrap.cpp  rpo_cart_driver.cpp  rpo_cart_test.cpp  rpo_cart_utils.cpp  rpo_cart_utils.h  rpo_driver.cpp  rpo_driver_lsq.cpp  rpo_eig.cpp  rpo_eig_test.cpp  rpo_eig_vec_to_field.cpp  rpo_integrate.cpp  rpo_integrate.h  rpo_load.cpp  rpo_mff_to_pgf.cpp  rpo_preconditioner.cpp  rpo_preconditioner.h  rpo_rm_div.cpp  rpo_search_shifts.cpp  (+7 more)
dns-svv/: .smhist  Makefile  auxfield.C  auxfield.h  dns-svv  dns.h  dnsanalysis.C  drive.C  element.C  element.h  integrate.C  matrix.C  nonlinear.C  svv.C
dns/const_flow_rate/: domain.cpp  domain.h  integrate.cpp
dns/modified_fourier_interp/: rpo_utils.cpp  rpo_utils.h
dns/rebase_V9p1/: integrate.cpp  rpo_driver.cpp  rpo_test_shift.cpp  rpo_utils.cpp  rpo_utils.h
dns/remove_reflection_symmetry/: rpo_driver.cpp  rpo_utils.cpp
dns_ff/: Makefile  auxfield.C  dns.h  dnsanalysis.C  drive.C  element.C  element.h  feml.C  fieldforce.C  fieldforce.h  integrate.C  nonlinear.C
doc/: Doxyfile  Makefile  semtex.dox  userguide.bib  (+1 more)
elliptic/: CMakeLists.txt  Makefile  drive.C  drive.cpp  helmholtz.C  helmholtz.cpp  testsuite
femlib/: CMakeLists.txt  Makefile  RCM.f  README.md  canfft.f  cfemdef.h  cfemlib.h  defaults.h  family.c  femlib.h  fftpack.f  filter.c  fourier.c  initial.y  mapping.c  matops.F  message.c  netlib.f  nr77.h  operators.c  polylib.c  polylib.h  polyops.c  temfftd.F
femlib/tests/: Makefile  dealiasmult.C  dpt.C  glzw.C  lagder.C  lagint.C  lagpro.C  polyint.C  polylib_test.c  shapes.C  tensorproducts.C  testBVD.C  testDLT.C  testDLT2.C  testDLT3.C  testFFT.C  testFFTW.C  testcfft.C  testpoly.c  testsine.C
src/: CMakeLists.txt  Makefile  analysis.C  analysis.cpp  analysis.h  auxfield.C  auxfield.cpp  auxfield.h  bcmgr.C  bcmgr.cpp  bcmgr.h  boundary.C  boundary.cpp  boundary.h  bsys.C  bsys.cpp  bsys.h  condition.C  condition.cpp  condition.h  data2df.C  data2df.cpp  data2df.h  domain.C  domain.cpp  domain.h  edge.C  edge.cpp  edge.h  element.C  element.cpp  element.h  family.C  family.cpp  feml.C  feml.cpp  feml.h  field.C  field.cpp  field.h  (+31 more)
stab/: CMakeLists.txt  README  analysis.cpp  auxfield.cpp  auxfield.h  bcmgr.cpp  circulate  combine.cpp  domain.cpp  drive.cpp  edge.cpp  feml.cpp  field.cpp  field.h  flipmap.cpp  geometry.cpp  geometry.h  integrate.cpp  lns.cpp  normalize.cpp  reflect.cpp  stab.h  stabanalysis.cpp  symmetrise.cpp
stab/BH-arnoldi/: CMakeLists.txt  README  arnoldi.cpp  dspmvc.f  floK.c  lns__511.rua
stab/testcases/: README
stab/testcases/Floquet/cylinder/: m32_2D
stab/testcases/Steady/channel/: channel
stab/testcases/Steady/cylinder/: semicyl02  semicyl02-base
stab/testcases/Steady/stenosis/: stenosis-base
stab/testcases/Transient/backstep/: bfs12  bfs12-base
stab/testcases/cavityTW/: cav01_bse  cav01_bse.rst  testrun
stab/testcases/chan2D/: chan3  chan3.bse  testrun
stab/testcases/cylinder3D/: m32  m32_2D  testrun
stab/testcases/pulseChan/: testrun
stab/testcases/stenosis3D/: Sten50_Cyl  Sten50_Cyl.bse  testrun
stab/testcases/swirl2D/: vb2  vb2.bse  vb2.num
stab/testcases/swirl3D/: testrun  vb2_bse.rst
utility/: CMakeLists.txt  Makefile  README.md  addfield.C  addfield.cpp  addquick  average  avgdump.c  calc.C  calc.cpp  chop.c  compare.C  compare.cpp  convert.c  data2df_template.cpp  eneq.C  eneq.cpp  enumerate.C  enumerate.cpp  gmsh2sem.py  index  index00  integral.C  integral.cpp  interp.C  interp.cpp  linedist  lowpass.C  lowpass.cpp  mapmesh.C  mapmesh.cpp  massmat.cpp  meshplot.cpp  meshpr.C  meshpr.cpp  moden.c  modep  modep.cpp  noiz.c  nonlin.cpp  (+40 more)
veclib/: CMakeLists.txt  Makefile  README  README.md  XMXM.c  blas.h  cveclib.h  icount.c  ifirst.c  ixmax.c  ixmin.c  lany.c  lapack.h  lxsame.c  memory.c  util.c  utility.h  vdble.c  veclib.h  vsngl.c  xbrev.c  xclip.c  xcndst.c  xcopy.c  xfft.c  xfill.c  xgathr.c  xgathr_scatr.c  xgathr_scatr_sum.c  xgathr_sum.c  xiclip.c  xmask.c  xmxm.f  xmxv.c  xmxva.c  xneg.c  xpolint.c  xramp.c  xrand.c  xsadd.c  (+57 more)
(+1638 files in other folders)
